gitops/instance/grafana/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: strimzi
    app.kubernetes.io/managed-by: grafana-operator
    dashboards: strimzi
  name: grafana-service
  namespace: strimzi-metrics
spec:
  port:
    targetPort: grafana
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
